www/css/nonColorStyling.css
/*
Main Styling for App that creates standard css for base styling.
*/

/* Main side bar______________________________________________________________*/
.main-sidebar { 
  font-size: 18px;
  width: 250px;
}

/*top active nav link*/
/* This controls the top level of the nav sidebar */
.sidebar-light-primary .nav-sidebar > .nav-item > .nav-link.active {
  font-size: 1.15rem;
  border-left: 5px solid #3c8dbc;
} 
            
/* Logo Image */ 
.brand-link .brand-image {
  background-color:white;
  max-height: 40px;
}
              
/* Title word in top left corner */ 
.brand-link {
  line-height: 1.25;
}

.brand-text {
  font-weight: bold !important; 
  font-size: 1.5rem;
  padding-left: 15px;
}

/* 
***********************************************************************
                Boxes
***********************************************************************
*/
.card card-primary {
  min-height: 300px;
}

.card-title {
  font-weight: bold;
  font-size: 1.15rem;
}


/* Tabbox ____________________________________________________________________*/
/*Selected tabs of tab box*/
.nav-pills {
  font-size: 1.15rem;
  font-weight: bold;
}


/* Removes outline from small buttons on box pabels */
.btn.btn-tool.btn-sm {
  border-style: none
}


#sw-content-customize_dropdown_button {
  min-width: 50rem;
  min-height: 25rem;
}

/*Change size and position of arrow on DROPDOWN to match dropdownbutton*/
#customize_dropdown_button > .glyphicon-triangle-bottom {
  font-size: 9px;
  top: -2px;
  left: 3px;
}

#lineplot_dropdown_1 > .glyphicon-triangle-bottom {
  font-size: 9px;
  top: -2px;
  left: 3px;
}                                                      
#lineplot_dropdown_2 > .glyphicon-triangle-bottom {
  font-size: 9px;
  top: -2px;
  left: 3px;
}
#lineplot_dropdown_3 > .glyphicon-triangle-bottom {
  font-size: 9px;
  top: -2px;
  left: 3px;
}
#lineplot_dropdown_4 > .glyphicon-triangle-bottom {
  font-size: 9px;
  top: -2px;
  left: 3px;
}


/*These three tags make it so the fancy buttons on the homepage are 
highlighted on hover*/
#HOME_build_model:hover{
  filter: brightness(50%);
}

#HOME_to_load_database:hover{
  filter: brightness(50%);
}

#Home_to_load_datatable:hover{
  filter: brightness(50%);
}

#tabbox_build_equations {
  overflow: visible;
}

.btn.dropdown-toggle.btn-light {
  height:38px;
}

#diffeq_box {
  min-height: 300px;
}

/*
#myVariables_DT tr {
  background-color: #fff0;
  border: 0px solid black;
}
*/

/* 
***********************************************************************
                Model Create Tables (Rhandson)
***********************************************************************
*/


.rhandsontable thead tr th {
  font-weight: bold;
}


#sw-content-plot_option_dropdown {
  min-width: 50rem;
  min-height: 25rem;
}


#lineplot_dropdown_1 {
  display: block; 
  width: 100%; 
  border: 1px solid lightgrey;
}

#lineplot_dropdown_2 {
  display: block; 
  width: 100%; 
  border: 1px solid lightgrey;
}

#lineplot_dropdown_3 {
  display: block; 
  width: 100%; 
  border: 1px solid lightgrey;
}

#lineplot_dropdown_4 {
  display: block; 
  width: 100%; 
  border: 1px solid lightgrey;
}

#eqnCreate_showEquationBuilding {
  font-size: 1.5em;
}

#build_equation_edit {
  font-size: 1.5em;
}

#lineplot_variable_dropdown_button {
  background-color: #f8f9fa;
  color: black;
  width: 100%;
}

.glyphicon-arrow-right {
  font-size:  0.8em;
}       

#debug_text_view {
  background-color: lightgray;
  height: 500px;
}

#plot_var_table {
  z-index: 2;
}

#plot_param_table {
  z-index: 2;
}

#createVar_add_compartment_button {
  background: #F9F9F9;
  color: grey;
}

#createVar_remove_compartment_button {
  background: #F9F9F9;
  color: grey;
}
                                  
#createVar_add_variable_button {
  background: #F9F9F9;
  color: grey;
}

#species_del_open_modal {
  background: #F9F9F9;
  color: grey;
}
                                
#createVar_add_variable_to_all_button {
  background: #F9F9F9;
  color: grey;
}

#eqns_add_open_modal {
  background: #F9F9F9;
  color: grey ;
}
                                                  
#eqns_delete_open_modal {
  background: #F9F9F9;
  color: grey
}
                            
#io_add_open_modal {
  background: #F9F9F9;
  color: grey;
}
                                                          
#io_delete_open_modal {
  background: #F9F9F9;
  color: grey
}

/* 
***********************************************************************
                Model Create Tables (Rhandson)
***********************************************************************
*/

/* Removing footers from modals */
#modal_create_variable .modal-footer{
  display:none;
}

#modal_delete_species .modal-footer{
  display:none;
}

#modal_create_equations .modal-footer{
  display:none;
}

#modal_edit_equations .modal-footer{
  display:none;
}

#modal_delete_equations .modal-footer{
  display:none;
}

#modal_add_IO .modal-footer{
  display:none;
}

#modal_delete_io .modal-footer{
  display:none;
}

/* Increasing Width of Modals */
#modal_create_equations .modal-dialog{
  max-width: 1200px
}

#modal_edit_equations .modal-dialog{
  max-width: 1200px
}

#modal_delete_equations .modal-dialog{
  max-width: 1200px
}

#modal_add_IO .modal-dialog{
  max-width: 1200px
}

/* 
***********************************************************************
                   Picker Inputs
***********************************************************************
*/

/* Main Picker Box*/
.btn.dropdown-toggle.btn-light {background-color:  #FFFFFF;
  border-color: #ced4da;
  color: black;}

/* Inside picker box, square where words are*/
.filter-option {background-color: white;
color: black;}

/* box of dropdown of picker*/
.dropdown-menu.show {background-color: white;
color: black;}

/* Dropdown menu in picker showing choices*/
.dropdown-menu.inner.show {background-color: white;
color: black;}

/*Picker dropdown menu items*/
.dropdown-item {background-color: white;
color: black !important;}

/*Picker dropdown menu selected item*/
.dropdown-item.active.selected {background-color: #007bff;
  color: white !important;}

/*Picker dropdown hovered over menu item*/
.dropdown-item:hover {background-color: #c5c6c6;
color: white;}

